# ThmanyahAssignment

./: README.md  code.py  docker-compose.yml  makefile  pyproject.toml  req.txt  requirements.txt  sc.txt  technical_report.md  test.py
docker/: Dockerfile
github/workflows/: .pre-commit-config.yaml  ci.yml
mlruns/0/: meta.yaml
mlruns/956192587854716524/: meta.yaml
mlruns/956192587854716524/57ee540755fc482f8330b348a9fa6b73/: meta.yaml
mlruns/956192587854716524/57ee540755fc482f8330b348a9fa6b73/tags/: mlflow.runName  mlflow.source.name
mlruns/956192587854716524/86d597ac848d4fd0a1cf79910af7a5c2/: meta.yaml
mlruns/956192587854716524/86d597ac848d4fd0a1cf79910af7a5c2/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/956192587854716524/86d597ac848d4fd0a1cf79910af7a5c2/outputs/m-50c97cd7dd7b4c9585c2e6a5513ec6f2/: meta.yaml
mlruns/956192587854716524/86d597ac848d4fd0a1cf79910af7a5c2/params/: churn_rate
mlruns/956192587854716524/86d597ac848d4fd0a1cf79910af7a5c2/tags/: mlflow.runName
mlruns/956192587854716524/models/m-50c97cd7dd7b4c9585c2e6a5513ec6f2/: meta.yaml
mlruns/956192587854716524/models/m-50c97cd7dd7b4c9585c2e6a5513ec6f2/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/956192587854716524/models/m-50c97cd7dd7b4c9585c2e6a5513ec6f2/metrics/: accuracy  f1_score  precision  recall  roc_auc
models/: churn_predictor.pkl  data_processor.pkl  monitor.pkl
playgroud/: test.ipynb
src/api/: app.py
src/data/: preprocessing.py
src/models/: model.py  training.py
src/monitoring/: peformance.py
(+2 files in other folders)
